my-helm/fortune-teller/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortune-teller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx  
  rules:
    - host:  #replace with dns
      http:
        paths:
          - path: /fortune(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fortune-teller
                port:
                  number: 80
